--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <html>
-mudkip
-<html>
+<header><title>This is title</title></header>
+<body>
+Hello And welcome to mudkips rom site!
+</body>
+</html>
