--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-<h1> mudkip </h1>
+<h1> made by mudkip#8872 on discord  </h1>
+<img src="https://cdn.discordapp.com/attachments/712082787720757308/720657730334883840/madkip.jpg" width="200" />
 <html>
 <header><title>mudkip</title></header>
 <body>
-Welcome to mudkips rom site!
-</body>
+Welcome to mudkips rom site where you can find ROMS for nes , snes , gb , gba , gbc , nds , 3ds 
+, gc , wii , wiiu , switch , ps1 , ps2 , ps3 , xbox , xbox360, arcade
+</body
 </html>
-<h1> Snes </h1>
-<a href="https://drive.google.com/file/d/1D3nbBXYQh2FX5JilGnCuMcvD2Zmgf-jY/view">actraiser</a>
+<h1> Snes  </h1>
+<a target="_blank" href="https://drive.google.com/file/d/1D3nbBXYQh2FX5JilGnCuMcvD2Zmgf-jY/view">ActRaiser (USA) Rom Snes</a>
+  
