--- a/index.html
+++ b/index.html
@@ -7,4 +7,4 @@ Welcome to mudkips rom site where you can find ROMS for nes , snes , gb , gba , 
 , gc , wii , wiiu , switch , ps1 , ps2 , ps3 , xbox , xbox360, arcade
 </body
 </html>
-<a href="nes.html">Nintendo entertainment system roms</a> 
+<a href="snes.html">Super nintendo entertainment system roms</a> 
