--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <body>
 Welcome to mudkips rom site where you can find ROMS for nes , snes , gb , gba , gbc , nds , 3ds 
 , gc , wii , wiiu , switch , ps1 , ps2 , ps3 , xbox , xbox360, arcade
-</body
-</html>
+<h1>snes<h1>
 <a href="snes.html">Super nintendo entertainment system roms</a> 
+  </html>
+  </body>
