--- a/snes.html
+++ b/snes.html
@@ -1,5 +1,8 @@
 <html>
 <h1>snes roms<h1>
+<pre>
 <a target="_blank" href="https://drive.google.com/file/d/1D3nbBXYQh2FX5JilGnCuMcvD2Zmgf-jY/view?usp=sharing">ActRaiser (USA)</a>
 <a target="_blank" href="https://drive.google.com/file/d/1LYLGqkGwCPLWhZ9cpSxJchuhnnNoWSQd/view">ActRaiser 2 (USA)</a>
 <a target="_blank" href="https://drive.google.com/file/d/14IICaxYD_ZImtiHtRpsgPdvRSXiKekpU/view">The Adventures Of Batman & Robin (USA)</a>
+</pre>
+  </html>
