--- a/snes.html
+++ b/snes.html
@@ -1,8 +1,18 @@
 <html>
 <h1>snes roms<h1>
 <pre>
+<h1> A <h1>
 <a target="_blank" href="https://drive.google.com/file/d/1D3nbBXYQh2FX5JilGnCuMcvD2Zmgf-jY/view?usp=sharing">ActRaiser (USA)</a>
 <a target="_blank" href="https://drive.google.com/file/d/1LYLGqkGwCPLWhZ9cpSxJchuhnnNoWSQd/view">ActRaiser 2 (USA)</a>
-<a target="_blank" href="https://drive.google.com/file/d/14IICaxYD_ZImtiHtRpsgPdvRSXiKekpU/view">The Adventures Of Batman & Robin (USA)</a>
-</pre>
+<a target="_blank" href="https://drive.google.com/file/d/14IICaxYD_ZImtiHtRpsgPdvRSXiKekpU/view">Adventures Of Batman & Robin (USA)</a>
+<a target="_blank" href="https://drive.google.com/file/d/1g_GNrJmzQV4J9qO9ROSCaMEmNQV-IGPN/view">Aladdin (USA) </a>
+<a target="_blank" href="https://drive.google.com/file/d/1kwiBiaOr-vQsyUTsMnUnR4uzRZ-YE54d/view">Alien 3 (USA) </a>
+<a target="_blank" href="https://drive.google.com/file/d/1kLaL2AIHUnprUpbQkt1BamhF0LWAulMq/view">Alien vs Predator (USA) </a>
+<a target="_blank" href="https://drive.google.com/file/d/1IOqgb2bzBz8rsdjqYC6btBfAou0BTXS3/view">Animaniacs (USA) </a>\
+<a target="_blank" href="https://drive.google.com/file/d/1ZgjQqIcNLBcy1quBdb3W_nLpORoi4rPM/view">Axelay (USA) </a>
+<h1>B<h1>
+<a target="_blank" href="https://drive.google.com/file/d/1wO50S4hMIGZ9rbxlcwohy3fslwXs1Wjc/view">Beavis & Butt-Head (USA) (lol) </a>
+<a target="_blank" href="https://drive.google.com/file/d/1wO50S4hMIGZ9rbxlcwohy3fslwXs1Wjc/view">Beavis & Butt-Head (USA) (lol) </a>
+
   </html>
+  </pre>
