--- a/snes.html
+++ b/snes.html
@@ -12,7 +12,9 @@
 <a target="_blank" href="https://drive.google.com/file/d/1ZgjQqIcNLBcy1quBdb3W_nLpORoi4rPM/view">Axelay (USA) </a>
 <h1>B<h1>
 <a target="_blank" href="https://drive.google.com/file/d/1wO50S4hMIGZ9rbxlcwohy3fslwXs1Wjc/view">Beavis & Butt-Head (USA) (lol) </a>
-<a target="_blank" href="https://drive.google.com/file/d/1wO50S4hMIGZ9rbxlcwohy3fslwXs1Wjc/view">Beavis & Butt-Head (USA) (lol) </a>
+<a target="_blank" href="https://drive.google.com/file/d/1TkTuZfnlsO0v3DaBA-TZVVg8oYfYbOW_/view">Blackthorne (USA) </a>
+<a target="_blank" href="https://drive.google.com/file/d/14DhAXxP15uetpb02eLVcWbAqbFruoaco/view?usp=drive_open">Breath of fire (USA) </a>
+<a target="_blank" href="https://drive.google.com/file/d/1dkFw3wkT_F4738k33xu-vZ1WFx9nzjpC/view">Breath of fire 2 (USA) </a>
 
   </html>
   </pre>
