--- a/snes.html
+++ b/snes.html
@@ -15,6 +15,14 @@
 <a target="_blank" href="https://drive.google.com/file/d/1TkTuZfnlsO0v3DaBA-TZVVg8oYfYbOW_/view">Blackthorne (USA) </a>
 <a target="_blank" href="https://drive.google.com/file/d/14DhAXxP15uetpb02eLVcWbAqbFruoaco/view?usp=drive_open">Breath of fire (USA) </a>
 <a target="_blank" href="https://drive.google.com/file/d/1dkFw3wkT_F4738k33xu-vZ1WFx9nzjpC/view">Breath of fire 2 (USA) </a>
+<a target="_blank" href="https://drive.google.com/file/d/1Kqogr2l_Wu0nxhJ-hia4alL4nKtv9Cou/view">Bust a move (USA) </a>
+<c1> C <c1>
+<a target="_blank" href="https://drive.google.com/file/d/1YRWhR7aSyzAmbflj42V5C7PResgrBWGF/view">Castlevania - Dracula X (USA) </a>
+<a target="_blank" href="https://drive.google.com/file/d/10VC2MZKR0Sy5HWpf3x5Zfj4LZGFy3O79/view?usp=drive_open">Chester Cheetah - Too cool to fool (USA) </a>
+<a target="_blank" href="https://drive.google.com/file/d/1eb1dpUPxFlIePnMAuDG0BnV8Ap00_peh/view">Chester Cheetah - Wild West Quest (USA) </a>
+
+
+
 
   </html>
   </pre>
