--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-<h1> made by mudkip#8872 on discord  </h1>
+<pre><h1> made by mudkip#8872 on discord  </h1>
 <img src="https://cdn.discordapp.com/attachments/712082787720757308/720657730334883840/madkip.jpg" width="200" />
 <html>
 <header><title>mudkip</title><link rel="icon" type="image/png" href="madkip.png"/> </header>
 <body>
 Welcome to mudkips rom site where you can find ROMS for nes , snes , gb , gba , gbc , nds , 3ds 
 , gc , wii , wiiu , switch , ps1 , ps2 , ps3 , xbox , xbox360, arcade
-<h1>snes<h1>
+
 <a href="snes.html">Super nintendo entertainment system roms</a> 
+<a href="ps3.html">Play station 3 roms</a> 
   </html>
   </body>
+</pre>
