--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
-<pre><h1> made by mudkip#8872 on discord  </h1>
+<!DOCTYPE html> <html>
+<pre>
+  <h1> this website is still in construction </h1>
+  <style>
+h1 {
+  color: red;
+}
+body {
+background:rgb(43, 0, 0);
+}
+
+p {
+color: white;
+}
+a {
+color: pink;
+}
+  </style>  
 <img src="https://cdn.discordapp.com/attachments/712082787720757308/720657730334883840/madkip.jpg" width="200" />
-<html>
-<header><title>mudkip</title><link rel="icon" type="image/png" href="madkip.png"/> </header>
+<head><title>mudkip</title><link rel="icon" type="image/png" href="madkip.png"/> </head>
 <body>
-Welcome to mudkips rom site where you can find ROMS for nes , snes , gb , gba , gbc , nds , 3ds 
-, gc , wii , wiiu , switch , ps1 , ps2 , ps3 , xbox , xbox360, arcade
+<p>Welcome to mudkips rom site where you can find ROMS for nes , snes , gb , gba , gbc , nds , 3ds 
+, gc , wii , wiiu , switch , ps1 , ps2 , ps3 , xbox , xbox360, arcade</p>
 
 <a href="snes.html">Super nintendo entertainment system roms</a> 
-<a href="ps3.html">Play station 3 roms</a> 
+<a href="ps3.html">Playstation 3 roms</a> 
   </html>
   </body>
 </pre>
