--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <pre>
  <h1> <a href="sony.html">Sony</a> <a href="nintendo.html">Nintendo</a> <a href="sega.html">Sega</a></h1>
 <a href="sega.html"></a>
-  <h1> this website is still in construction for now use <a href="https://drive.google.com/drive/folders/1MmF_Z3-81GAKVvcR7aq0LHblZC1KFWXq?usp=sharing">this</a></h1>  
+  <h1> this website is still in construction for now use <a href="https://drive.google.com/drive/folders/1MmF_Z3-81GAKVvcR7aq0LHblZC1KFWXq?usp=sharing">this</a>(you wont see any progress i am working on it privatley</h1>  
 <img src="madkip.png" width="200" />
 <body>
 <p>Welcome to mudkips rom site where you can find ROMS for snes , gba ,  nds , 3ds 
