--- a/genesis.html
+++ b/genesis.html
@@ -1,5 +1,5 @@
 <html>
-<h1>Genesis roms</h1>
+<h1>Genesis roms</h1><pre>
 <a href="https://drive.google.com/file/d/1omQKyo-KuzF-abv_CnUI6NO5pwi6pv03/view">Alex Kidd in the enchanted castle</a>
 <a href="https://drive.google.com/file/d/1u1Wd4b9dkeR5xNfwB_3KHUwWZNlwrHq9/view">Golden Axe</a>
 <a href="https://drive.google.com/file/d/1XGnEmOwKuEg6PxnQRekZ46U31WXkFVRU/view">Streets Of Rage 2</a>
@@ -8,5 +8,5 @@
 
 <head><link rel="stylesheet" type="text/css" href="styles.css"></head>
 <a href="index.html">Back Home</a>
-
+</pre>
 </html>
